# life_app

./: .gitignore  package-lock.json  package.json  pyproject.toml  railway.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
dashboard/: views.py
goals/: admin.py  forms.py  models.py  urls.py  views.py
goals/migrations/: 0001_initial.py
src/css/: input.css
static/: manifest.json  serviceworker.js
static/css/: output.css
templates/: base.html
templates/account/: login.html  logout.html  signup.html
templates/dashboard/: home.html
templates/goals/: goal_form.html  goal_overview.html
templates/goals/partials/: macro_form_fields.html  strength_form_feilds.html  weight_form_fields.html
templates/tracking/: meal_list.html  saved_meal_list.html  weighin_list.html  workout_detail.html  workout_list.html
templates/tracking/partials/: exercise_card.html  meal_create_response.html  meal_row.html  meal_totals.html  saved_meal_row.html  set_row.html  water_display.html  weighin_row.html
tracking/: admin.py  forms.py  models.py  urls.py  views.py
tracking/migrations/: 0001_initial.py
