[project]
name = "life-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-allauth>=65.14.0",
    "gunicorn>=25.0.0",
    "jwt>=1.4.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
